bdr.BDR2.scala.error
Compilation error:
BDR2:3: error: not found: value c
  c=readMessage()
  ^BDR2:4: error: not found: value c
  c match {
  ^